// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-tooltip-beta #render should link to "for" element 1`] = `
<gux-tooltip-beta for="element" id="gux-tooltip-i">
  <template shadowrootmode="open">
    <gux-tooltip-base-beta placement="bottom-start" accent="light" tooltipid="gux-tooltip-i">
      <span slot="content">
        <slot name="content">
          <slot>
          </slot>
        </slot>
      </span>
    </gux-tooltip-base-beta>
  </template>
  <div slot="content">
    Tooltip
  </div>
</gux-tooltip-beta>
`;

exports[`gux-tooltip-beta #render should link to sibling element 1`] = `
<gux-tooltip-beta id="gux-tooltip-i">
  <template shadowrootmode="open">
    <gux-tooltip-base-beta placement="bottom-start" accent="light" tooltipid="gux-tooltip-i">
      <span slot="content">
        <slot name="content">
          <slot>
          </slot>
        </slot>
      </span>
    </gux-tooltip-base-beta>
  </template>
  <span slot="content">
    Tooltip
  </span>
</gux-tooltip-beta>
`;
